2008-03-09 Adam Fedor  <fedor@gnu.org>

	* Version 0.4.0

2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>

	* AppController.m: do not call openPanel twice

2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>

	* GNUmakefile,
	AppController.m, AppController.h,
	EasyDiffInfo.plist,
	gorm files:
	Warning fixes, implement preferences for CVS executable path and
	removed wizardry relying on internal Bundle methods

2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile: Removed GNUSTEP_INSTALLATION_DIR.

2005-06-13  Adam Fedor  <fedor@gnu.org>

	* AppController.m ([AppController -compareFileToCVS:sender]): 
	Get the path to the cvs executable.
	* DiffView.m ([DiffView -tile]): ceilf->ceil	
	* DiffWindowController.m (-initWithFilename:andTempFilename:):
	Switch filenames so CVS version is on the left.

2003-07-05  Benhur Stein <benhur@inf.ufsm.br>

	* DiffMiddleView.m (tile): Set needs display.
	(drawRect:): Use a bluish color for the foreground.
	* DiffScroller.m (drawRect:): Idem.
	* DiffTextView.m (computeLineRangesFromUpTo:): Avoid an empty range. 
	* DiffView.m: Display fixups.

2003-07-05  Philippe C.D. Robert <probert@siggraph.org>

        * Replacing all #import directives with #include directives
        * Changing main menu title to EasyDiff
        * Updating Gorm files

2002-06-23  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* fix for patch creation. (patch from right to left would not work)
	
2002-06-12  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* gcc 2.95 fix
	
2002-06-04  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Committing to GNUstep CVS repository in dev-apps.

2002-06-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Merging support, patching support among other changes

2002-04-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Version 0.1.9

2002-02-14  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Version 0.1
